css/style_reservia.css
@font-face{ 
  font-family: "Railway";
  src: url("../fonts/Railway-webfont.eot");
  src: url("../fonts/Railway-webfont.svg") format("woff"),
       url("../fonts/Railway-webfont.ttf") format("truetype"),
       url("../fonts/Railway-webfont.svg") format("svg");
}

*{
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html{
  font-family: "Railway", sans-serif;
}

/****** DESKTOP STYLE ******/

body{
  margin: auto;
  max-width: 1200px;
  width: 100%;
}

a{
  font-size: 1em;
	font-style: normal;
  text-decoration: none;
}

/****** Header style ******/
header{
  display: flex;
  justify-content: space-between;
  width: 100%;
}

header img{
  height: auto;
  padding: 1em 0em;
  width: 10%; 
}

header nav{
  display: flex;
  flex-grow: 1;
  justify-content: flex-end;
}

header input{
  background: transparent;
  border: none;
  color: #0065FC;
  font-size: 1em;
  font-weight: bold;
  padding: 1.5em 1.75em;
}

.nav-btn1 {
  border-top: solid 0.2em #0065FC;
  color: #0065FC;
  font-size: 1em;
  padding: 1.5em 1.75em;
}

.nav-btn2 {
  border-top: solid 0.2em transparent;
  color: #000;
  font-size: 1em;
  padding: 1.5em 1.75em;
}

.nav-btn1:hover{
  border-top: solid 0.2em #0065FC;
}

.nav-btn2:hover{
  border-top: solid 0.2em #000000;
}

/***** Filters section *****/
body section{
  display: flex;
  flex-direction: column;
  width: 100%;
}

h1{
  font-size: 1.5em;
  font-weight: 500;
}

.reg-text {
  font-style: normal;
  font-size: 1em;
  padding: 0.2em 0.2em;
}

/* Search bar */
#search-item {
  display: flex;
  flex-direction: row;
  height: 2.5em;
  margin: 1em 0;
}

#search-item div{
  align-items: center;
  background-color: #F2F2F2;
  border: 0.1em solid #F2F2F2;
  border-top-left-radius: 1em;
  border-bottom-left-radius: 1em;
  display: flex;
  padding: 0 1em;
}

#search-item input{
  border: 0.1em solid #F2F2F2;
  border-right: 0.1em solid transparent;
  min-width: 200px;
  padding-left: 1em;
}

#search-item a{
  align-items: center;
  background-color: #0065FC;
  border: 0.1em solid #0065FC;
  border-bottom-right-radius: 1em;
  border-top-right-radius: 1em;
  color: #FFFFFF;
  display: flex;
  font-weight: normal;
  padding: 1em;
}

#filter-options{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

#filter-options span{
  align-self: center;
}

/* Filter buttons */
#filter-options a{
  padding: 1em 0em 1em 0em;
  margin: 1em;
}

.icon{
  background-color: #DEEBFF;
  border: 0.1em solid #DEEBFF;
  border-radius: 50%;
  color: #0065FC;
  left: 2.3em;
  padding: 0.6em;
  position: relative;
}

.filter-button{
  border: 0.1em solid #F2F2F2;
  border-radius: 2em;
  color: #000000;
  font-size: 1em;
  font-weight: normal;
  padding: 0.6em 1em 0.6em 2.5em;
  text-decoration: none;
}

#filter-options a:hover .filter-button{
  background-color: #0065FC;
  border: 0.1em solid transparent;
  border-radius: 2em;
  color: #FFF;
  font-size: 1em;
  font-weight: normal;
  padding: 0.6em 1em 0.6em 2.5em;
  text-decoration: none;
  transition: 700ms ease;
}

#filter-options a:hover .icon{
  background-color: #F2F2F2;
  border: 0.1em solid #F2F2F2;
  border-radius: 50%;
  color: #000000;
  left: 2.3em;
  padding: 0.6em;
  position: relative;
  transition: 700ms ease;
}

.mini_icon{
  background-color: #FFF;
  border: 0.1em solid #F2F2F2;
  border-radius: 50%;
  color: #0065FC;
  font-size: 0.75em;
  margin-right: 0.5em;
  padding: 0.5em 0.8em 0.3em 0.9em;
}

/* Main content style*/
.box2{
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  margin: 0.3em 0.5em;
  padding: 0.8em;
}
h2{
  font-size: 1.3em;
  font-weight: 500;
}
.block{
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: space-between;
  padding: 1em 1em 0.3em 1.5em;
}
#populars{
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  order: 2;
  background-color: #F2F2F2;
  margin: 0.5em;
  flex-grow: 2s;
  border-radius: 1.5em;
  min-width: 350px;
}
.pop_card{
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 1.5em;
  margin: 0em;
  padding: 0.4em;
  box-shadow: 0em 0em 0.15em #acacac;
}
#chart_icon{
  font-size: 1.5em;
  padding: 1em;
}
.pic_pop{
  display: flex;
  flex-direction: row;
  object-fit: cover;
  width: 127px;
  height: 150px;
  border-top-left-radius: 1em;
  border-bottom-left-radius: 1em;
}
.info_pop{
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-left: 1em;
}
.place_pop{
  padding-top: 1em;
}
.price_pop{
  padding-bottom: 2em;
}
#places{
  display: flex;
  flex-direction: column;
  flex-grow: 3;
  order: 1;
  background-color: #F2F2F2;
  margin: 0.5em 1em 0.5em 0.5em;
  border-radius: 1.5em;
}
.block_cards{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 0.5em 1em;
}
.link_card{
  color: #000000;
  text-decoration: none;
  margin: 0.5em;
}
.place_card{
  display: flex;
  flex-direction: column;
  background-color: #FFFFFF;
  border-radius: 1.5em;
  padding: 0.4em;
  box-shadow: 0em 0em 0.15em #acacac;
}
.pic_place{
  display: flex;
  flex-direction: column;
  align-items: stretch;
  object-fit: cover;
  width: 240px;
  height: 115px;
  border-top-left-radius: 1em;
  border-top-right-radius: 1em;
}
.rank_place, .rank_pop{
  font-size: 0.8em;
  padding: 0.5em 0.5em;
  color: #0065FC;
}
.empty_star{
  color: #b1b1b1;
}
.more{
  margin-bottom: 1em;
}
#activities{
  display: flex;
  flex-direction: column;
  margin: 0.3em 0em;
  padding: 0em;
}
.box3{
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  margin: 0em;
  padding-bottom: 2em;
}
.activity_card1{
  display: flex;
  flex-direction: column;
  background-color: #FFFFFF;
  border-radius: 1em;
  padding: 0em;
  margin: 0.5em;
  box-shadow: 0em 0em 0.15em #acacac;
}
.pic_activity1{
  display: flex;
  flex-direction: column;
  align-items: stretch;
  object-fit: cover;
  width: 300px;
  height: 450px;
  border-top-left-radius: 1em;
  border-top-right-radius: 1em;
}
.activity_text{
  padding: 1em;
}
.block_activities{
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.activity_card2{
  display: flex;
  flex-direction: column;
  background-color: #FFFFFF;
  border-radius: 1em;
  padding: 0em;
  margin: 0.5em;
  box-shadow: 0em 0em 0.15em #acacac;
}
.pic_activity2{
  display: flex;
  flex-direction: column;
  align-items: stretch;
  object-fit: cover;
  width: 300px;
  height: 210px;
  border-top-left-radius: 1em;
  border-top-right-radius: 1em;
}
.pic_activity3{
  display: flex;
  flex-direction: column;
  align-items: stretch;
  object-fit: cover;
  width: 300px;
  height: 150px;
  border-top-left-radius: 1em;
  border-top-right-radius: 1em;
}
footer{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: flex-start;
  column-gap: 15%;
  background-color: #F2F2F2;
}
.part{
  display: flex;
  flex-direction: column;
  padding: 1.5em 1em 2em 2em;
}
#about, #bookings, #help{
  padding: 1em 0em;
}

